fix log urls wrap / Inclosssure download link fixed

--- a/assets/css/log.css
+++ b/assets/css/log.css
@@ -14,6 +14,10 @@
 	margin: 10px 0;
 }
 
+.logentry {
+    word-wrap: break-word;
+}
+
 .logentry pre code {
     white-space: pre-wrap;
     word-wrap: break-word;
